button without SideEffect

--- a/src/comonents/Friends/Friends.module.css
+++ b/src/comonents/Friends/Friends.module.css
@@ -14,26 +14,11 @@
 
 }
 
-
-/*
-.dialogsItems .dialog {
-   color:rosybrown;
+.background {
+   background-color: darkgrey;
 }
 
-.dialogsItems .active {
-   color:gold;
-}
-
-.dialogsItems {
+.background button {
 
 }
-
-.messages {
-
-}
-
-.messages .message {
-
-}
-*/
 
