follow/unfollow API

--- a/src/comonents/Header/Header.module.css
+++ b/src/comonents/Header/Header.module.css
@@ -3,8 +3,16 @@
     background-color:midnightblue;
 }
 
-
-
 .item img {
     width: 60px;
+}
+
+.login {
+    float:right;
+    margin-top: 12px;
+    margin-right: 12px;
+}
+
+.login a {
+    color: white;
 }
